--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Aula05</title>
 </head>
-<body>
+<body class="bg-dark">
 
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -50,9 +50,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <img class="img-fluid" src="img/capablack.jpg" alt="">
+                    <img class="img-fluid mb-3" src="img/capablack.jpg" alt="">
                 </div>
             </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-3">
+              <img class="img-fluid img-thumbnail" src="img/guerreiro.png">
+            </div>
+            <div class="col-3">
+              <img class="img-fluid img-thumbnail" src="img/Ork.png">
+            </div>
+            <div class="col-3">
+              <img class="img-fluid img-thumbnail" src="img/hlwcorescomplementares.jpg">
+            </div>
+            <div class="col-3">
+              <img class="img-fluid img-thumbnail" src="img/India.jpg">
+            </div>
+          </div>
+        </div>
+        <div class="container mt-3">
+          <div class="row">
+            <div class="col-12 text-center">
+              <img class="img-fluid rounded" src="img/patrick.jpg">
+            </div>
+          </div>
         </div>
       </main>
 
